--- a/web_blog/src/templates/register.html
+++ b/web_blog/src/templates/register.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% block content %}
 <div class="container page-form">
-    <form id="login-form" action="/auth/login" method="post">
+    <form id="login-form" action="/auth/register" method="post">
         <div class="form-group">
             <label for="email">Email</label>
         <input type="text" id="email" name="email" class="form-control">
@@ -10,7 +10,7 @@
             <label for="password">Password</label>
         <input type="password" id="password" name="password" class="form-control">
         </div>
-        <button type="submit" class="btn btn-success">Login</button>
+        <button type="submit" class="btn btn-success">Sign up</button>
     </form>
 </div>
 {% endblock %}
