--- a/web_blog/src/templates/posts.html
+++ b/web_blog/src/templates/posts.html
@@ -2,11 +2,15 @@
 {% block content %}
 <div class="container">
     <h2>{{blog_title}}</h2>
+    {% if post|length > 0 %}
     {% for post in posts %}
         <h3>{{post.title}}</h3>
         <p>{{post.content}}</p>
         <p>{{post.author}}</p>
         <hr>
     {% endfor %}
-</div>
+    {% else %}
+        <h4> There aren't any posts yet</h4>
+    {% endif %}
+</div>s
 {% endblock %}
